# agent-lab

./: .editorconfig  .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  ACKNOWLEDGEMENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEV_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  agent-lab-0.1.0.tgz  agent-lab-0.2.0.tgz  agent-lab-0.2.1.tgz  agent-lab-0.2.10.tgz  agent-lab-0.2.11.tgz  agent-lab-0.2.12.tgz  agent-lab-0.2.13.tgz  agent-lab-0.2.14.tgz  agent-lab-0.2.2.tgz  agent-lab-0.2.3.tgz  agent-lab-0.2.4.tgz  agent-lab-0.2.5.tgz  agent-lab-0.2.6.tgz  agent-lab-0.2.7.tgz  agent-lab-0.2.8.tgz  agent-lab-0.2.9.tgz  agent-lab-0.3.0.tgz  agent-lab-1.0.0.tgz  agent-lab-1.0.1.tgz  agent-lab-1.0.2.tgz  agent-lab-1.1.0.tgz  agent-lab-1.1.1.tgz  agent-lab-1.10.0.tgz  agent-lab-1.11.0.tgz  agent-lab-1.12.0.tgz  (+48 more)
.claude/: CLAUDE.md
agent_lab/: __init__.py  app_factory.py  main.py
app/: main.py
charts/: README.md
cookiecutter/: README.md  cookiecutter.json
cookiecutter/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  compose.yml  config-dev.yml  config-docker.yml  config-test.yml  pyproject.toml
cookiecutter/{{cookiecutter.project_slug}}/.claude-plugin/: marketplace.json
cookiecutter/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
cookiecutter/{{cookiecutter.project_slug}}/docker/app/: Dockerfile
cookiecutter/{{cookiecutter.project_slug}}/docs/: one-time-setup.md
cookiecutter/{{cookiecutter.project_slug}}/gitops/apps/: kustomization.yaml
cookiecutter/{{cookiecutter.project_slug}}/gitops/apps/{{cookiecutter.project_slug}}/: cdp-deployment.yaml  cdp-service.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
cookiecutter/{{cookiecutter.project_slug}}/gitops/infrastructure/configs/: cluster-issuer.yaml  kustomization.yaml  namespaces.yaml  postgres.yaml  redis.yaml  vault.yaml
cookiecutter/{{cookiecutter.project_slug}}/gitops/infrastructure/controllers/: cert-manager.yaml  cnpg.yaml  kustomization.yaml  redis-operator.yaml  traefik.yaml
cookiecutter/{{cookiecutter.project_slug}}/plugins/{{cookiecutter.project_slug}}-dev/: README.md
cookiecutter/{{cookiecutter.project_slug}}/plugins/{{cookiecutter.project_slug}}-dev/.claude-plugin/: plugin.json
cookiecutter/{{cookiecutter.project_slug}}/terraform/aks/01_aks/: main.tf  outputs.tf  variables.tf  vault_unseal.tf  versions.tf
cookiecutter/{{cookiecutter.project_slug}}/terraform/aks/02_gitops/: main.tf  outputs.tf  variables.tf  versions.tf
cookiecutter/{{cookiecutter.project_slug}}/terraform/aks/03_vault_config/: main.tf  outputs.tf  variables.tf  versions.tf
cookiecutter/{{cookiecutter.project_slug}}/tests/integration/: conftest.py  test_echo_agent_api.py
cookiecutter/{{cookiecutter.project_slug}}/tests/unit/: test_smoke.py
cookiecutter/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: main.py
cookiecutter/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/agents/echo/: agent.py
cookiecutter/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/agents/react_agent/: agent.py
cookiecutter/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/core/: container.py
cookiecutter/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/mcp/: prompts.py  tools.py
dags/: static_document.py
doc/: ACKNOWLEDGEMENT.md  CHARTS.md  DEV_GUIDE.md  DOMAIN.md  ETL.md  KEYCLOAK.md  LICENSE.md  MCP.md  OTEL.md  RESEARCHER_GUIDE.md  REST_API.md  SETUP.md  TESTS.md  USER_GUIDE.md  VAULT.md  openapi.json
notebooks/: 01_setup_embeddings_service.ipynb  02_test_agent_type-adaptive_rag.ipynb  03_test_agent_type-react_rag.ipynb  04_test_agent_type-vision_document.ipynb  05_test_agent_type-multiagent-coder.ipynb  adaptive_rag_agent.ipynb  (+16 more)
(+408 files in other folders)
